--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -24,13 +24,13 @@
             <h3>Pablo Menéndez Navarro</h3>
             <p>Desarrollador Full Stack</p>
             <div class="tech-stack">
-              <span class="tech-tag">Angular</span>
               <span class="tech-tag">Java</span>
               <span class="tech-tag">Spring Boot</span>
+              <span class="tech-tag">Angular</span>
               <span class="tech-tag">MySQL</span>
               <span class="tech-tag">Docker</span>
-              <span class="tech-tag">GitHub</span>
-              <span class="tech-tag">Ionic</span>
+              <span class="tech-tag">MongoDB</span>
+              <span class="tech-tag">Kotlin</span>
             </div>
           </div>
         </div>
@@ -46,11 +46,11 @@
       <div class="stat-label">Años de experiencia</div>
     </div>
     <div class="stat-item">
-      <div class="stat-number">4+</div>
+      <div class="stat-number">{{ totalProjects }}+</div>
       <div class="stat-label">Proyectos completados</div>
     </div>
     <div class="stat-item">
-      <div class="stat-number">5+</div>
+      <div class="stat-number">{{ totalSkills }}+</div>
       <div class="stat-label">Tecnologías</div>
     </div>
 
