--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -226,6 +226,15 @@
           <div class="skill-card">
             <div class="skill-info">
               <h4>
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/amazonwebservices/amazonwebservices-original.svg" alt="AWS" class="tech-icon">
+                AWS
+              </h4>
+              <p>Servicios en la nube para despliegue y escalabilidad</p>
+            </div>
+          </div>
+          <div class="skill-card">
+            <div class="skill-info">
+              <h4>
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" class="tech-icon">
                 GitHub
               </h4>
