Cambiar imagen de about a recurso local para evitar errores

--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="about-image">
-        <img src="https://media.licdn.com/dms/image/v2/D4D16AQFBfHs8NFaShQ/profile-displaybackgroundimage-shrink_350_1400/B4DZhCKKiZGkAY-/0/1753456618021?e=1761177600&v=beta&t=icPMseHxkr493UIrfy-yT2XUyykvwEAZfISQIGLqQeY" 
+        <img src="assets/images/background-blur.jpg"
               alt="Pablo Menéndez Navarro">
       </div>
     </div>
